# ais_decoder_parser

./: .gitmodules  CMakeLists.txt
ais/: CMakeLists.txt
ais/core/: bit_buffer.h  message.h
ais/include/: ais_parser.h  message.h
ais/include/core/: multipart_reassembler.h  nmea_parser.h
ais/include/messages/: message.h  message_factory.h
ais/include/types/: type1.h  type18.h  type21.h  type27.h  type4.h  type5.h  types.h
ais/src/: ais_parser.cpp  message.cpp
ais/src/core/: bit_buffer.cpp  multipart_reassembler.cpp  nmea_parser.cpp
ais/src/messages/: message_factory.cpp
ais/src/types/: type1.cpp  type18.cpp  type21.cpp  type27.cpp  type4.cpp  type5.cpp
ais/src/utils/: multipart_reassembler.cpp
cmake/: IncludeDirectories_AIS.cmake  IncludeDirectories_CFG.cmake  IncludeDirectories_COMM.cmake  IncludeDirectories_LOG.cmake
communicate/: CMakeLists.txt
communicate/include/: ais_communication_service.h
config/include/: config.h
example/ais_gui_process/: CMakeLists.txt  main_gui.cpp
example/ais_gui_process/script/tools/: deploy_ucrt_dlls.sh
example/ais_gui_process/src/: tcp_ipc_client.cpp
example/ais_gui_process/src/core/: ais_parser_manager.cpp  ais_parser_manager.h  ipc_client_manager.cpp  ipc_client_manager.h  processmanager.cpp  processmanager.h  tcp_ipc_client.cpp  tcp_ipc_client.h
example/ais_gui_process/src/ui/: main_window.cpp  main_window.h
example/ais_gui_process/src/ui/widget/: config_panel.cpp  config_panel.h  message_display_panel.cpp  message_display_panel.h  nmea_parser_panel.cpp  nmea_parser_panel.h  service_control_panel.cpp  service_control_panel.h
example/ais_gui_process/src/ui/widgets/: message_display_panel.cpp  nmea_parser_panel.cpp  nmea_parser_panel.h  service_control_panel.cpp  service_control_panel.h
example/ais_gui_process/src/utils/: process_utils.cpp
example/ais_ipc/: ipc_connection.cpp  ipc_connection.h  protocol.cpp  protocol.h  tcp_client_session.cpp  tcp_client_session.h  tcp_server_session.cpp  tcp_server_session.h  tcp_session.cpp  tcp_session.h
example/ais_service_process/: CMakeLists.txt  main_service.cpp
example/ais_service_process/src/: ipc_server_manager.cpp  ipc_server_manager.h  tcp_ipc_server.cpp  tcp_ipc_server.h
example/ais_test_task/: CMakeLists.txt  main.cpp
example/ais_test_task/script/tools/: deploy_ucrt_dlls.sh
example/ais_test_task/src/: main_window.cpp  main_window.h
example/ais_test_task/src/factory/: ais_message_generator.cpp  ais_message_generator.h
example/ais_test_task/src/map/: map_graphicsview.cpp  map_graphicsview.h
example/ais_test_task/src/map/layers/: base_layer.h  vessels_layer.cpp  vessels_layer.h
example/ais_test_task/src/map/mapengine/: online_tile_loader.cpp
logger/: CMakeLists.txt  logger_define.h
modules/ais/: CMakeLists.txt
modules/ais/include/: ais_encoder.h
modules/ais/include/core/: bit_buffer.h  bit_buffer_encoder.h  nmea_encoder.h  nmea_parser.h
modules/ais/include/messages/: message_encoder_factory.h  type_definitions.h
modules/ais/include/utils/: sixbit_ascii_encoder.h
modules/ais/src/: ais_encoder.cpp  ais_parser.cpp
modules/ais/src/core/: bit_buffer.cpp  bit_buffer_encoder.cpp  nmea_encoder.cpp  nmea_parser.cpp
modules/ais/src/messages/: message.cpp  message_encoder_factory.cpp  message_factory.cpp  type_definitions.cpp
modules/ais/src/utils/: sixbit_ascii_encoder.cpp
modules/communicate/: CMakeLists.txt
modules/communicate/include/: ais_communication_service.h  lru.h
modules/communicate/src/: ais_communication_service.cpp
modules/config/: CMakeLists.txt
modules/config/example/: ais_config.yaml
modules/config/include/: config.h  config_manager.h
modules/config/src/: config_manager.cpp
modules/logger/: CMakeLists.txt  logger_define.h
modules/logger/impl/: logger_fprintf.h  logger_spdlog.h
modules/storage/: CMakeLists.txt
test/asi_communicate/: main.cpp
test/test_aisparse/: main.cpp
ui/: CMakeLists.txt
